--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 		</repository>
 	</repositories>
 	<build>
-		<finalName>web_module</finalName>
+		<finalName>app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
