--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.application.name=web_module
+spring.application.name=app
 server.port=8080
-server.servlet.context-path=/web_module
+server.servlet.context-path=/app
 #Eureka register
 eureka.client.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 #Actuator
 # Habilitar todos los endpoints
