--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=web_module
+spring.application.name=web-app
 server.port=8080
-server.servlet.context-path=/web_module
+server.servlet.context-path=/web-app
 #Eureka register
-eureka.client.enabled=true
+eureka.client.enabled=false
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 #Actuator
