--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
+		<version>2.7.18</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.web-app</groupId>
@@ -16,8 +16,8 @@
 	<name>web_app</name>
 	<description>Aplicacion web o modulo web para consumir web services rest </description>
 	<properties>
-		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.0</spring-cloud.version>
+		<java.version>1.8</java.version>
+		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -90,7 +90,7 @@
 		</repository>
 	</repositories>
 	<build>
-		<finalName>web-app</finalName>
+		<finalName>facebook</finalName>
 
 		<plugins>
 			<plugin>
