--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=web-app
+spring.application.name=facebook
 server.port=8080
-server.servlet.context-path=/web-app
+server.servlet.context-path=/facebook
 #Eureka register
 eureka.client.enabled=false
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -14,3 +14,5 @@ management.endpoint.health.show-details=always
 management.endpoint.health.password=mysecretpassword
 #Config external 
 spring.cloud.config.enabled=false
+# apis para openFeing
+url.service.gateway=http://45.33.13.164/
