se empaqueta para el loguin de face y para el inicio de mi web pablo en tomcat

--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 		</repository>
 	</repositories>
 	<build>
-		<finalName>ROOT</finalName>
+		<finalName>facebook</finalName>
 
 		<plugins>
 			<plugin>
